# libloc-rs

./: Cargo.toml  README.md  example-location.db  ipfire_libloc_db_v1.ksy
.github/workflows/: build.yml
benches/: locations.rs  native.rs
src/: format.rs  lib.rs
tools/: Cargo.toml
tools/src/: main.rs
