[package]
name = "libloc"
description = "Read location databases in libloc format"
version = "0.1.1"
authors = ["Tobias Bucher <tobiasbucher5991@gmail.com>"]
repository = "https://github.com/tbu-/libloc-rs/"
keywords = ["geoip", "libloc"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
chrono = { version = "0.4.31", optional = true }
memmap2 = { version = "0.9", features = ["stable_deref_trait"] }
ipnet = "2.0"
yoke = { version = "0.7", default-features = false }
yoke-derive = { version = "0.7", optional = true }
zerocopy = "0.7.24"
zerocopy-derive = { version = "0.7.24", optional = true }

[features]
default = ["compat-0-1-1", "time"]
compat-0-1-1 = []
time = ["chrono"]
verified = ["yoke-derive", "zerocopy-derive"]

[dev-dependencies]
bencher = "0.1.5"
libc = "0.2.153"

[workspace]
members = [
    ".",
    "tools",
]

[[bench]]
name = "locations"
harness = false

[[bench]]
name = "native"
harness = false
